<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.SignUpActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarSignUp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/sign_up" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/sign_in_background"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/create_an_account"
                android:textAlignment="center"
                android:textColor="@color/seeThroughWhite"
                android:textSize="@dimen/heading1" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginTop="10dp"
                android:paddingStart="10dp"
                android:background="@color/seeThroughWhite"
                android:drawableStart="@drawable/ic_mail_black_24dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="@dimen/edit_text_height"
                android:paddingStart="10dp"
                android:background="@color/seeThroughWhite"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="@dimen/edit_text_height"
                android:paddingStart="10dp"
                android:background="@color/seeThroughWhite"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_sign_in_style"
                android:text="@string/sign_up"
                android:textColor="@color/white" />

        </LinearLayout>
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>